# yuki-client

./: README.md
history/: history_demo_chat.json
python/: client.py  requirements.txt  yuki-client_v0.4.0.py  yuki-client_v0.5.0.py  yuki_client_v0.6.1.py
rust/: Cargo.toml  yuki_client.rs
rust/src/: main.rs
