[package]
name = "yuki_client"
version = "0.6.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rustyline = "12.0" # For TUI input and completion
dirs = "5.0"      # For cross-platform path handling
futures-util = "0.3"